--- a/sleepin/templates/top.html
+++ b/sleepin/templates/top.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <title>sleepinトップ画面</title>
     <!-- js -->
-    <script src="src/js/jquery-3.5.1.min.js"></script>
+    <script src="../../static/js/jquery-3.5.1.min.js"></script>
 
     <!-- css -->
-    <link rel="stylesheet" href="src/css/top.css">
+    <link rel="stylesheet" href="../../static/css/top.css">
 </head>
 
 <body>
@@ -19,16 +19,16 @@
 
         </div>
         <div class="top">
-            <a href="top.html"><img src="../img/Icon dog.png"></a>
+            <a href="top.html"><img src="../../static/img/Icon dog.png"></a>
         </div>
     </header>
 
     <ul class="topmenu">
-        <li class="top_item">睡眠時間<br /><a href="record_time.html"><img src="../img/top_sleeptime.png"></a></li>
-        <li class="top_item">食生活<br /><a href="record_meal.html"><img src="../img/top_meal.png"></a></li>
-        <li class="top_item">ヘルス<br /><a href="record_health.html"><img class="health" src="../img/top_health.png"></a>
+        <li class="top_item">睡眠時間<br /><a href="record_time.html"><img src="../../static/img/top_sleeptime.png"></a></li>
+        <li class="top_item">食生活<br /><a href="record_meal.html"><img src="../../static/img/top_meal.png"></a></li>
+        <li class="top_item">ヘルス<br /><a href="record_health.html"><img class="health" src="../../static/img/top_health.png"></a>
         </li>
-        <li class="top_item">日記<br /><a href="record_diary.html"><img class="diary" src="../img/top_diary.png"></a>
+        <li class="top_item">日記<br /><a href="record_diary.html"><img class="diary" src="../../static/img/top_diary.png"></a>
         </li>
     </ul>
 
