--- a/static/css/health.css
+++ b/static/css/health.css
@@ -22,56 +22,53 @@
     margin: 15px;
 }
 
-#calendar {
-    height: 30px;
-    width: 30%;
-    margin: 50px;
-}
-
 .registerhealth_menu {
+    display: table-cell;
     text-align: center;
     flex: 1;
 }
 
-.registerhealth_menu p {
-    font-weight: bold;
+.registerhealth_item {
+    margin: 90px;
+}
+
+input {
+    width: 350px;
+    height: 23px;
     font-size: 20px;
 }
 
-#form_area input {
-    height: 30px;
-    width: 50%;
-    text-align: center;
+textarea {
+    width: 350px;
+    height: 23px;
     font-size: 20px;
 }
 
-#form_area {
-    text-align: center;
-    margin: 10px;
+select {
+    width: 350px;
+    height: 25px;
+    font-size: 20px;
 }
 
-#add input {
-    height: 30px;
-    width: 5%;
-    font-size: 18px;
-    font-weight: bold;
-    color: #fff;
-    text-align: center;
-    margin: 5px;
-    background-color: rgb(68, 67, 67);
+.table {
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: middle;
+    border-spacing: 15px;
 }
 
 button {
     font-size: 15px;
     padding: 5px 5px;
     font-weight: bold;
-    width: 95px;
+    width: 88px;
     height: 40px;
     background-color: #349996;
     color: #fff;
     border-style: none;
     cursor: pointer;
-    margin: 60px;
+    margin: 20px 35px;
 }
 
 button:focus {
@@ -82,8 +79,4 @@ button:active {
     -webkit-transform: translateY(4px);
     transform: translateY(4px);/*下に動く*/
     border-bottom: none;/*線を消す*/
-}
-
-.button {
-    margin: 30px;
 }
