--- a/static/css/sleep.css
+++ b/static/css/sleep.css
@@ -22,50 +22,40 @@
     margin: 15px;
 }
 
-#calendar {
-    height: 30px;
-    width: 30%;
-    margin: 50px;
-}
-
 .registertime_menu {
+    display: table-cell;
     text-align: center;
     flex: 1;
 }
 
-.feel_item {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-    font-weight: bold;
+.registertime_item {
+    margin: 90px;
+}
+
+input {
+    height: 25px;
     font-size: 18px;
 }
 
-.feel img {
-    width: 150px;
-    height: 110px;
-    margin: 15px;
-}
-
-.feel {
-    list-style: none;
-    overflow: hidden;
-    text-align: center;
-    display: table;
-    width: 100%;
+.table {
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: middle;
+    border-spacing: 15px;
 }
 
 button {
     font-size: 15px;
     padding: 5px 5px;
     font-weight: bold;
-    width: 95px;
+    width: 88px;
     height: 40px;
     background-color: #349996;
     color: #fff;
     border-style: none;
     cursor: pointer;
-    margin: 60px;
+    margin: 20px 25px;
 }
 
 button:focus {
@@ -76,32 +66,4 @@ button:active {
     -webkit-transform: translateY(4px);
     transform: translateY(4px);/*下に動く*/
     border-bottom: none;/*線を消す*/
-}
-
-.button {
-    margin: 30px;
-}
-
-.registered_time {
-    list-style: none;
-    overflow: hidden;
-    text-align: center;
-    display: table;
-    width: 100%;
-    height: 500px;
-    margin: 60px 0px;
-    flex: 1;
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.randomImg img {
-    width: 150px;
-    height: 110px;
-    margin: 30px;
-}
-
-.cross {
-    width: 30px;
-    height: 30px;
 }
