--- a/static/css/top.css
+++ b/static/css/top.css
@@ -9,11 +9,36 @@ body {
     min-height: 100vh;
 }
 
+a {
+    text-decoration: none;
+}
+
 #header {
     background: #fff;
-    padding: 15px 0 10px;
+    padding: 28px 0 0;
     border-bottom: 1px solid #000000;
     text-align: center;
+}
+
+.header_menu {
+    color: #000;
+    font-weight: bold;
+    padding: 10px 0px 0px;
+    height: 50px;
+}
+
+.header_menu li {
+    display: inline-block;
+    transition: .3s;
+    margin: 10px 50px;
+}
+
+.header_menu li:hover {
+    transform: rotate(2deg);
+}
+
+.header_menu a {
+    color: #000;
 }
 
 .top img {
