--- a/sleepin/templates/diary_register.html
+++ b/sleepin/templates/diary_register.html
@@ -10,15 +10,15 @@
 
 {% block head %}
 <!-- css -->
-<link rel="stylesheet" href="{% static 'css/diary.css' %}">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 {% endblock %}
 
 <!--<body>-->
 
 {% block contents %}
-<div class="registerdiary_menu">
-    <div class="registerdiary_item">
+<div class="container">
+    <div class="row">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <table class="table">
