--- a/sleepin/templates/top.html
+++ b/sleepin/templates/top.html
@@ -17,8 +17,8 @@
 
     <ul class="topmenu">
         <li class="top_item">睡眠時間<br /><a href="{% url 'sleepin:sleeptime_record' %}"><img src="{% static 'img/top_sleeptime.png' %}"></a></li>
-        <li class="top_item">食生活<br /><a href="{% url 'sleepin:meal_record' %}"><img src="{% static 'img/top_meal.png' %}"></a></li>
-        <li class="top_item">ヘルス<br /><a href="{% url 'sleepin:health_record' %}"><img class="health" src="{% static 'img/top_health.png' %}"></a>
+        <li class="top_item">食事<br /><a href="{% url 'sleepin:meal_record' %}"><img src="{% static 'img/top_meal.png' %}"></a></li>
+        <li class="top_item">運動<br /><a href="{% url 'sleepin:health_record' %}"><img class="health" src="{% static 'img/top_health.png' %}"></a>
         </li>
         <li class="top_item">日記<br /><a href="{% url 'sleepin:diary_record' %}"><img class="diary" src="{% static 'img/top_diary.png' %}"></a>
         </li>
