--- a/sleepin/templates/diary_delete.html
+++ b/sleepin/templates/diary_delete.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
+{% extends 'base.html' %}
+
+{% load static %}
+
+<html lang="ja">
+
+{% block title %}日記削除 | Private Sleepin {% endblock %}
+
+{% block active_diary_list %}active{% endblock %}
+
+{% block head %}
+
+<!-- css -->
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+{% endblock %}
+
+<!--<body>-->
+
+{% block contents %}
+<div class="container">
+    <div class="row">
+        <form method="POST">
+            {% csrf_token %}
+            <p>本当に削除しますか？</p>
+            <div class="button">
+                <button class="delete" type="submit">削除</button>
+                <a class="cancel" href="{% url 'sleepin:diary_detail' object.pk %}">キャンセル</a>
+            </div>
+        </form>
+    </div>
+</div>
+
+{% endblock %}
+
+<!--</body>-->
 </html>
