--- a/sleepin/templates/diary_record.html
+++ b/sleepin/templates/diary_record.html
@@ -13,17 +13,29 @@
 {% block head %}
 
 <!-- css -->
-<link rel="stylesheet" href="{% static 'css/diary.css' %}">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 
 {% endblock %}
 
 <!--<body>-->
 
 {% block contents %}
-    <ul class="diarymenu">
-        <li class="diary_item"><a href="{% url 'sleepin:diary_register' %}"><img src="{% static 'img/えんぴつのアイコン素材.png' %}"></a><br />日記</li>
-    </ul>
+
+<div class="container">
+    <div class="row">
+        <li class="calendar">
+            <p>カレンダー</p>
+            <a href="{% url 'sleepin:diary_calendar' %}"><img src="{% static 'img/カレンダーのフリーアイコン2.png' %}"></a>
+        </li>
+        <ul class="menu">
+            <li class="item"><a href="{% url 'sleepin:diary_register' %}"><img
+                    src="{% static 'img/えんぴつのアイコン素材.png' %}"></a><br/>日記
+            </li>
+        </ul>
+    </div>
+</div>
+
+{% endblock %}
 
 <!--</body>-->
-{% endblock %}
 </html>
