--- a/sleepin/templates/health_record.html
+++ b/sleepin/templates/health_record.html
@@ -11,16 +11,28 @@
 {% block head %}
 
 <!-- css -->
-<link rel="stylesheet" href="{% static 'css/health.css' %}">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 
 {% endblock %}
 
 <!--<body>-->
 
 {% block contents %}
-    <ul class="healthmenu">
-        <li class="health_item"><a href="{% url 'sleepin:health_register' %}"><img src="{% static 'img/フィットネスのピクトグラム1.png' %}"></a><br />運動</li>
-    </ul>
+
+<div class="container">
+    <div class="row">
+        <li class="calendar">
+            <p>カレンダー</p>
+            <a href="{% url 'sleepin:health_calendar' %}"><img src="{% static 'img/カレンダーのフリーアイコン2.png' %}"></a>
+        </li>
+        <ul class="menu">
+            <li class="item"><a href="{% url 'sleepin:health_register' %}"><img
+                    src="{% static 'img/フィットネスのピクトグラム1.png' %}"></a><br/>運動
+            </li>
+        </ul>
+    </div>
+</div>
+
 {% endblock %}
 
 <!--</body>-->
