--- a/sleepin/templates/meal_record.html
+++ b/sleepin/templates/meal_record.html
@@ -11,16 +11,28 @@
 {% block head %}
 
 <!-- css -->
-<link rel="stylesheet" href="{% static 'css/meal.css' %}">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 
 {% endblock %}
 
 <!--<body>-->
 
 {% block contents %}
-    <ul class="mealmenu">
-        <li class="meal_item"><a href="{% url 'sleepin:meal_register' %}"><img src="{% static 'img/お茶碗と箸.png' %}"></a><br />食生活</li>
-    </ul>
+
+<div class="container">
+    <div class="row">
+        <li class="calendar">
+            <p>カレンダー</p>
+            <a href="{% url 'sleepin:meal_calendar' %}"><img src="{% static 'img/カレンダーのフリーアイコン2.png' %}"></a>
+        </li>
+        <ul class="menu">
+            <li class="item"><a href="{% url 'sleepin:meal_register' %}"><img
+                    src="{% static 'img/お茶碗と箸.png' %}"></a><br/>食生活
+            </li>
+        </ul>
+    </div>
+</div>
+
 {% endblock %}
 
 <!--</body>-->
