--- a/sleepin/templates/meal_register.html
+++ b/sleepin/templates/meal_register.html
@@ -11,15 +11,15 @@
 {% block head %}
 
 <!-- css -->
-<link rel="stylesheet" href="{% static 'css/meal.css' %}">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 
 {% endblock %}
 
 <!--<body>-->
 
 {% block contents %}
-<div class="registermeal_menu">
-    <div class="registermeal_item">
+<div class="container">
+    <div class="row">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <table class="table">
