--- a/static/css/top.css
+++ b/static/css/top.css
@@ -6,7 +6,16 @@
 body {
     display: flex;
     flex-flow: column;
-    min-height: 100vh;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.container {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 a {
@@ -24,6 +33,7 @@ a {
     color: #000;
     font-weight: bold;
     padding: 10px 0px 0px;
+    overflow: hidden;
     height: 50px;
 }
 
@@ -72,14 +82,19 @@ a {
 }
 
 #footer {
+    width: 100%;
     background: #1B3240;
     padding: 15px 0 15px;
     border-top: 1px solid #fff;
     text-align: center;
+    color: #fff;
+    position: fixed;
+    bottom: 0;
+    margin-top: auto;
+
 }
 
 .footer_menu {
-    color: #fff;
     font-weight: bold;
 }
 
