--- a/sleepin/templates/base_calendar.html
+++ b/sleepin/templates/base_calendar.html
@@ -74,6 +74,7 @@
             <li>ABOUT</li>
             <li>HELP</li>
         </ul>
+        <small>Copyright (c) 睡眠管理アプリケーションSleepin All Rights Reserved.</small>
     </footer>
 </div>
 </body>
